<resources>
    <string name="app_name">Nepali News</string>
    <string name="app_id">ca-app-pub-7330887983553029~4271620333</string>
    <string name="banner_ad">ca-app-pub-7330887983553029/7016724249</string>
    <string name="intrestial_ad">ca-app-pub-7330887983553029/6244953658</string>
    <string name="native_ad">ca-app-pub-7330887983553029/7857418220</string>
    <string name="rewarded_ad">ca-app-pub-7330887983553029/7174891942</string>
    <string name="stream_offline">Radio station is offline. Please try again later.</string>
    <string name="no_to_dos">Add new todo or note\n&amp;\nSwipe Right to delete the item</string>
    <string name="title">What\'s on your mind?</string>
    <string name="date_reminder_default">Today</string>
    <string name="date_error_check_again">The date you entered is in the past.</string>
    <string name="remind_date_and_time">Reminder set for %1$s, %2$s %3$s</string>
    <string name="remind_me">Remind Me</string>
    <string name="remove">Remove</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <plurals name="number_of_new_entries_for_noti">
        <item quantity="one">One New News is available to read</item>
        <item quantity="other">%d New News are available to read</item>
    </plurals>
    <plurals name="number_of_new_entries_for_notification">
        <item quantity="one">One New Feed is available to read</item>
        <item quantity="other">%d New Feed are available to read</item>
    </plurals>
    <string name="screen_filter">Screen Filter</string>
    <string name="permission_control_blackbulb_label">Control Night Screen</string>
    <string name="permission_control_blackbulb_desc">get the status of Night Screen and control it</string>
    <string name="button_tip_text">Tip: Click the top left button to turn on Night Screen.</string>
    <string name="yellow_filter">Yellow filter</string>
    <string name="yellow_filter_explanation">Slide to the right to make the overlay yellow instead of grey</string>
    <string name="scheduler_status_on_show_enable_time">Automatically enable at %s.</string>
    <string name="scheduler_status_on_show_disable_time">It will be end at %s.</string>
    <string name="scheduler_status_off">OFF</string>
    <string name="action_settings">Settings</string>
    <string name="action_dark_theme">Dark theme</string>
    <string name="dark_theme_summary">Switch on to make Night Screen dark</string>
    <string name="dialog_choose_mode">Choose mode</string>
    <string name="mode_text_no_permission">No permission mode</string>
    <string name="mode_text_normal">Normal mode</string>
    <string name="mode_text_overlay_all">System overlay mode</string>
    <string name="mode_desc_no_permission">No permission is needed. However, the lockscreen, status bar and navigation bar are not dimmed. Note that this doesn\'t work in Android 7.0.</string>
    <string name="mode_desc_normal">Recommended mode. It is stable, although it cannot dim the navigation bar and it prevents users from clicking \"Install\" or \"Allow\" in permission dialogs.</string>
    <string name="mode_desc_overlay_all">Both the status bar and the navigation bar are dimmed. However, the screen may flash in some apps.</string>
    <string name="mode_android_oreo_explanation_dialog_title">Why can\'t I change the mode?</string>
    <string name="mode_android_oreo_explanation_dialog_message">Since Android Oreo (8.0), Android strictly limits the permissions of floating windows. The methods used before are no longer available. Maybe we will support better methods to control brightness in the future.</string>
    <string name="mode_android_oreo_explanation_read_more">Read more</string>
    <string name="mode_android_oreo_explanation_url" translatable="false">https://developer.android.com/about/versions/oreo/android-8.0-changes.html#all-aw</string>
    <string name="more_settings">More settings</string>
    <string name="notification_channel_running_status">Running status</string>
    <string name="shortcut_label_switch">Toggle</string>
    <string name="action_about">About</string>
    <string name="about_author">Author: Paper Airplane Dev - Fung Gwo</string>
    <string name="about_text">"Night Screen can help protect you from the harm of strong light at night.\nSome devices\' lowest brightness is still high so we can make it lower by creating a mask on screen.\n\nIf you want to support this application, you could send some money to my Alipay: fythonx\@gmail.com"</string>
    <string name="about_other">My blog: <a href="http://feng.moe">http://feng.moe</a>\nMy sina weibo: <a href="http://weibo.com/fython">@某烧饼</a>\nPaypal: <a href="https://www.paypal.me/fython">https://www.paypal.me/fython</a>\nLogo Designer: Google+ Youlun Zhai</string>
    <string name="about_donate_alipay">Support author via Alipay</string>
    <string name="dialog_overlay_enable_title">Enable Status Bar Overlay</string>
    <string name="dialog_overlay_enable_message">Enabling this can overlay the status bar at the top of the screen, but it may need a permission on some devices (such as MIUI and Android 6.0). \nIf it doesn\'t work on the first try, please allow Night Screen to show system alert windows.</string>
    <string name="mask_fail_to_start">Failed to start mask. Please check whether the system has denied the permissions.</string>
    <string name="dialog_first_run_title">First run</string>
    <string name="dialog_first_run_message">Can you see this message? If you can, Night Screen is working well.\nIt will automatically stop after 5 seconds if you don\'t press OK.</string>
    <string name="notification_running_title">Night Screen is enabled</string>
    <string name="notification_running_msg">Click here to open settings</string>
    <string name="notification_paused_title">Night Screen is paused</string>
    <string name="notification_paused_msg">Click here to open settings or swipe to stop Night Screen</string>
    <string name="notification_action_turn_off">Pause</string>
    <string name="notification_action_turn_on">Resume</string>
    <string name="scheduler_title">Auto mode</string>
    <string name="dialog_ignore_battery_opt_title">Note</string>
    <string name="dialog_ignore_battery_opt_msg">Due to restrictions on apps introduced in Android 6.0, we may not be able to automatically (de-)activate Night Screen on time. \n\nA possible solution is to tell Android to ignore battery optimizations for Night Screen. To do so, tap \"Go to settings\" and confirm the dialog that follows.</string>
    <string name="dialog_button_go_to_set">Go to settings</string>
    <string name="never">never</string>
    <string name="update">Update</string>
    <string name="colon">:\u00A0</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_all_read">Mark all as read</string>
    <string name="error">Error</string>
    <string name="network_error">The network is not set up</string>
    <string name="loading">Loading…</string>
    <string name="no_result">No result</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <plurals name="number_of_new_news">
        <item quantity="one">One New News</item>
        <item quantity="other">%d New News</item>
    </plurals>
    <plurals name="number_of_new_entries">
        <item quantity="one">One New Entry</item>
        <item quantity="other">%d New Entries</item>
    </plurals>
    <string name="feeds">Feeds</string>
    <string name="menu_add_feed">Add feed</string>
    <string name="no_feeds">No feeds</string>
    <string name="no_filters">No rules</string>
    <string name="edit_feed_title">Edit feeds</string>
    <string name="new_feed_title">New feed</string>
    <string name="menu_add_group">Add group</string>
    <string name="menu_import">Import from OPML</string>
    <string name="menu_export">Export to OPML</string>
    <string name="storage_request_explanation">To be able to import or export the feeds from or to a file, you must allow the application to access to the storage memory.</string>
    <string name="error_feed_error">The feed website is unreachable.</string>
    <string name="error_feed_process">The feed can not be processed.</string>
    <string name="error_feed_url_exists">The address already exists.</string>
    <string name="error_feed_import">The selected file could not be imported.</string>
    <string name="error_feed_export">The export has failed. Make sure you have a writable SD-card mounted.</string>
    <string name="error_external_storage_not_available">The external storage (e.g. SD-card) is not available.</string>
    <string name="feed_no_summary">\u003c No summary available. \u003e</string>
    <string name="feed_url">URL or Site name</string>
    <string name="optional">(optional)</string>
    <string name="feed_cookie">Authentication Cookie</string>
    <string name="context_menu_show_read">Show read entries</string>
    <string name="settings_category_refresh">Automated refresh</string>
    <string name="settings_refresh_enabled">Enable automatic refresh</string>
    <string name="settings_refresh_enabled_description">Enable the automatic refresh of feeds</string>
    <string name="news_settings_refresh_enabled_description">Enable the automatic refresh of Recent News</string>
    <string name="settings_refresh_interval">Refresh interval</string>
    <string name="settings_category_content_presentation">Content presentation</string>
    <string name="settings_keep_time">Time that the entries will be kept</string>
    <string name="settings_display_images">Display images</string>
    <string name="settings_display_images_description">Display images in entries</string>
    <string name="settings_preload_image_mode">Preload images</string>
    <string name="settings_font_size">Text size</string>
    <string name="settings_display_oldest_first">Entries order</string>
    <string name="settings_display_oldest_first_description">Display oldest entries first</string>
    <string name="settings_display_entries_fullscreen">Auto-fullscreen entries</string>
    <string name="settings_display_entries_fullscreen_description">Automatically display entries in fullscreen</string>
    <string name="settings_refresh_on_open">Refresh feeds on open</string>
    <string name="news_settings_refresh_on_open">Refresh News on open</string>
    <string name="news_settings_refresh_on_open_description">Refreshes Recent News after opening the application</string>
    <string name="settings_refresh_on_open_description">Refreshes all feeds after opening the application</string>
    <string name="settings_refresh_wifi_only">Refresh only over Wi-Fi</string>
    <string name="settings_refresh_wifi_only_description">Automatic refresh will only be done if Wi-Fi connection is available</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="filter_service">Filter Service</string>
    <string name="brightness">Brightness</string>
    <string name="mix_rgb_color">Mix RGB Color</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="night_mode">Night Mode</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="rate_us">Rate us</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="about_developer">About Developer</string>
    <string name="send_feedback_amp_problems"><![CDATA[Send Feedback & Problems]]></string>
    <string name="disclaimer">Disclaimer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="radio_timer">Radio Timer</string>
    <string name="share">Share</string>
    <string name="copy_current_link">Copy Current Link</string>
    <string name="open_in_browser">Open in Browser</string>
</resources>