<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/webViewMenuRefresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/webViewShare"
        android:orderInCategory="200"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/webViewCopyLink"
        android:orderInCategory="300"
        android:title="@string/copy_current_link"
        app:showAsAction="never" />

    <item
        android:id="@+id/webViewOpen"
        android:orderInCategory="400"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />
</menu>