<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/radio_Search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/radio_darktheme"
        android:icon="@drawable/ic_darker"
        android:orderInCategory="200"
        android:title="@string/dark_theme"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/radio_timer"
        android:icon="@drawable/ic_timer"
        android:orderInCategory="300"
        android:title="@string/radio_timer"
        app:showAsAction="ifRoom" />

</menu>